dodoany nowy komentarz na galezi master

--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <p>Pragraf Stas</p>
     <p>Paragraf Oliwier</p>
     <p>Paragraf Wojtka</p>
+    
+    <p>zmiany na galezi master</p>
 </body>
 </html>
