--- a/zadania-domowe/zadanie-2/index.html
+++ b/zadania-domowe/zadanie-2/index.html
@@ -5,8 +5,30 @@
     <title>Document</title>
 </head>
 <body>
-    <p>zadanie pierwsze</p>
-    <p>zadanie drugie</p>
+    <form action="https://formspree.io/agnieszka@wasilionok.pl" method="POST"> 
+    <label for="imie">Imię:</label><br/>
+    <input type="text" name="imie" id="imie"><br/>
+    <label for="nazwisko">Nazwisko:</label><br/>
+    <input type="text" name="nazwisko" id="nazwisko"><br/>
+    <label for="e-mail"> e-mail:</label><br/>
+    <input type="text" name="e-mail" id="e-mail"><br/>
+    <label for="number"> numer telefonu:</label><br/>
+    <input type="text" name="numer" id="number"><br/>
+    <label for="wybierz miasto"> wybierz miasto:</label><br/>
+       <select> 
+        <option value="Kraków">Kraków</option>
+        <option value="Warszawa">Warszawa</option>
+        <option value="Gdańsk">Gdańsk</option>
+     </select><br/>
+     <label for="ganger"> wybierz płeć:</label><br/>
+     <input type="radio" name="ganger" value="male">mężczyzna<br/>
+     <input type="radio" name="ganger" value="female">kobieta<br/>
+     <label for="zgoda"> zgoda na dane osobowe:</label><br/>
+    <input type="checkbox" name="zgoda" value="tak">tak<br/>
+    <label for="message"> wiadomosc:</label><br/>
+    <textarea maxlength="1000" id="message"></textarea><br/>
+    <input type="submit" value="Wyślij">
+   </form>
 
 
 </body>
