--- a/zadania-domowe/zadanie-2/index.html
+++ b/zadania-domowe/zadanie-2/index.html
@@ -14,7 +14,7 @@
     <input type="text" name="e-mail" id="e-mail"><br/>
     <label for="number"> numer telefonu:</label><br/>
     <input type="text" name="numer" id="number"><br/>
-    <label for="wybierz miasto"> wybierz miasto:</label><br/>
+    <label> wybierz miasto:</label><br/>
        <select> 
         <option value="Kraków">Kraków</option>
         <option value="Warszawa">Warszawa</option>
