--- a/zadania-domowe/zadanie-2/index.html
+++ b/zadania-domowe/zadanie-2/index.html
@@ -20,10 +20,10 @@
         <option value="Warszawa">Warszawa</option>
         <option value="Gdańsk">Gdańsk</option>
      </select><br/>
-     <label for="ganger"> wybierz płeć:</label><br/>
+     <label> wybierz płeć:</label><br/>
      <input type="radio" name="ganger" value="male">mężczyzna<br/>
      <input type="radio" name="ganger" value="female">kobieta<br/>
-     <label for="zgoda"> zgoda na dane osobowe:</label><br/>
+     <label> zgoda na dane osobowe:</label><br/>
     <input type="checkbox" name="zgoda" value="tak">tak<br/>
     <label for="message"> wiadomosc:</label><br/>
     <textarea maxlength="1000" id="message"></textarea><br/>
