--- a/zadania-domowe/zadanie-2/index.html
+++ b/zadania-domowe/zadanie-2/index.html
@@ -25,7 +25,7 @@
      <input type="radio" name="ganger" value="female">kobieta<br/>
      <label> zgoda na dane osobowe:</label><br/>
     <input type="checkbox" name="zgoda" value="tak">tak<br/>
-    <label for="message"> wiadomosc:</label><br/>
+    <label for="message"> wiadomość:</label><br/>
     <textarea maxlength="1000" id="message"></textarea><br/>
     <input type="submit" value="Wyślij">
    </form>
