--- a/zadania-domowe/zadanie-2/index.html
+++ b/zadania-domowe/zadanie-2/index.html
@@ -14,16 +14,17 @@
         <input type="text" name="e-mail" id="e-mail"><br/>
         <label for="number"> numer telefonu:</label><br/>
         <input type="text" name="numer" id="number"><br/>
-        <label for="miasto">wybierz miasto:</label><br/>
-        <select> 
+        
+        <label for="wybor"> wybierz miasto:</label><br/>
+        <select id="miasto"><br/>
             <option value="Kraków">Kraków</option>
             <option value="Warszawa">Warszawa</option>
             <option value="Gdańsk">Gdańsk</option>
-         </select><br/>
+         </select>
 
         <p>wybierz płeć:</p><br/>
         <label for="male">male</label><br/>
-        <input type="radio" name="ganger" id="male" value="male">mężczyzna<br/>
+        <input type="radio" name="ganger" id="male" >mężczyzna<br/>
         <label for="female">female</label><br/>
         <input type="radio" name="ganger" id="female" value="female">kobieta<br/>
 
