--- a/zadania-domowe/zadanie-2/index.html
+++ b/zadania-domowe/zadanie-2/index.html
@@ -15,12 +15,18 @@
         <label for="number"> numer telefonu:</label><br/>
         <input type="text" name="numer" id="number"><br/>
         
-        <label for="wybor"> wybierz miasto:</label><br/>
-        <select id="miasto"><br/>
+        <label for="wybierz miasto"> wybierz miasto:</label><br/>
+        <select>
             <option value="Kraków">Kraków</option>
             <option value="Warszawa">Warszawa</option>
             <option value="Gdańsk">Gdańsk</option>
          </select>
+         <p>
+         <a>wybierz płeć:</a>
+          <input type="radio" name="gender" value="male" checked> Male<br>
+          <input type="radio" name="gender" value="female"> Female<br>
+         </p>
+         
 
         <p>wybierz płeć:</p><br/>
         <label for="male">male</label><br/>
