--- a/zadania-domowe/zadanie-2/index.html
+++ b/zadania-domowe/zadanie-2/index.html
@@ -22,9 +22,9 @@
             <option value="Gdańsk">Gdańsk</option>
          </select>
          <p>
-         <a>wybierz płeć:</a>
-          <input type="radio" name="gender" value="male" checked> Male<br>
-          <input type="radio" name="gender" value="female"> Female<br>
+         <a>wybierz płeć:</a><br/>
+          <input type="radio" name="gender" value="male" checked> kobieta<br>
+          <input type="radio" name="gender" value="female">mężczyzna<br>
          </p>
          
 
