--- a/zadania-domowe/zadanie-1/index.html
+++ b/zadania-domowe/zadanie-1/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
     <p>zadanie pierwsze</p>
-    
+     <p>wybierz płeć:</p><br/>
+        <label for="male">male</label><br/>
+        <input type="radio" name="ganger" id="male" >mężczyzna<br/>
+        <label for="female">female</label><br/>
+        <input type="radio" name="ganger" id="female" value="female">kobieta<br/>
 </body>
 </html>
