--- a/zadania-domowe/zadanie-2/index.html
+++ b/zadania-domowe/zadanie-2/index.html
@@ -15,8 +15,8 @@
         <label for="number"> numer telefonu:</label><br/>
         <input type="text" name="numer" id="number"><br/>
         
-        <label for="wybierz miasto"> wybierz miasto:</label><br/>
-        <select  is="wybierz miasto"><br/>
+        <label for="valuem"> wybierz miasto:</label><br/>
+        <select  is="valume"><br/>
             <option value="Kraków">Kraków</option>
             <option value="Warszawa">Warszawa</option>
             <option value="Gdańsk">Gdańsk</option>
