--- a/zadania-domowe/zadanie-2/index.html
+++ b/zadania-domowe/zadanie-2/index.html
@@ -15,15 +15,15 @@
         <label for="number"> numer telefonu:</label><br/>
         <input type="text" name="numer" id="number"><br/>
         
-        <label for="valuem"> wybierz miasto:</label><br/>
-        <select  is="valume"><br/>
+        <label for="miasto"> wybierz miasto:</label><br/>
+        <select  id="miasto"><br/>
             <option value="Kraków">Kraków</option>
             <option value="Warszawa">Warszawa</option>
             <option value="Gdańsk">Gdańsk</option>
          </select>
          <p>
          <a>wybierz płeć:</a><br/>
-          <input type="radio" name="gender" value="male" checked> kobieta<br>
+          <input type="radio" name="gender" value="male" checked>kobieta<br>
           <input type="radio" name="gender" value="female">mężczyzna<br>
          </p>
          
