--- a/zadania-domowe/zadanie-2/index.html
+++ b/zadania-domowe/zadanie-2/index.html
@@ -16,7 +16,7 @@
         <input type="text" name="numer" id="number"><br/>
         
         <label for="miasto"> wybierz miasto:</label><br/>
-        <select  id="miasto"><br/>
+        <select  id="miasto">
             <option value="Kraków">Kraków</option>
             <option value="Warszawa">Warszawa</option>
             <option value="Gdańsk">Gdańsk</option>
