--- a/zadania-domowe/zadanie-1/index.html
+++ b/zadania-domowe/zadanie-1/index.html
@@ -11,5 +11,11 @@
         <input type="radio" name="ganger" id="male" >mężczyzna<br/>
         <label for="female">female</label><br/>
         <input type="radio" name="ganger" id="female" value="female">kobieta<br/>
+        <p>
+         <a>wybierz płeć:</a><br/>
+          <input type="radio" name="gender" value="male" checked>kobieta<br>
+          <input type="radio" name="gender" value="female">mężczyzna<br>
+         </p>
+        
 </body>
 </html>
