--- a/zadania-domowe/zadanie-3/index.html
+++ b/zadania-domowe/zadanie-3/index.html
@@ -2,12 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Naglowek</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
-    <p>zadanie pierwsze</p>
-    <p>zadanie drugie</p>
-    <p>zadanie trzecie</p>
+   <header id="header">
+       <div class="pic">
+        <div class="tekst">
+            <h1 class="naglowek1">i am the best</h1><br/>
+            <h2 class="naglowek2">Front End Developer</h2>
+        </div>
+    </div>
+    </header>
+    
 
 </body>
 </html>
