--- a/zadania-domowe/zadanie -_d_1/index.html
+++ b/zadania-domowe/zadanie -_d_1/index.html
@@ -16,7 +16,7 @@
         <label for="imie">Name:</label>
         <input type="text" name="name" id="name" font size="40" placeholder="Enter your name" required ><br/><br/>
        <label for="number"> Telephone:</label>
-        <input type="text" name="numer" id="numer" font size="40" placeholder="Patterm: 1-234-567-8910"  required ><br/><br/>
+        <input type="text" name="numer" id="numer" font size="40" placeholder="Patterm: 234-567-891" pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}" required ><br/><br/>
         <label for="email"> Email address:</label>
         <input type="text" name="email" id="email" font size="40" placeholder="Enter your email address" required ><br/><br/> 
     </fieldset>
