--- a/zadania-domowe/zadanie -_d_1/index.html
+++ b/zadania-domowe/zadanie -_d_1/index.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
-   <div>
+   <div action="https://formspree.io/agnieszka@wasilionok.pl" method="POST">
        <p class="tekst1">A Simple Form</p>
        <p class="tekst2"> Form Fundamentals</p>
    </div>
    
-    <fieldset action="https://formspree.io/agnieszka@wasilionok.pl" method="POST">
+    <fieldset >
        <legend>Customer info:</legend><br>
         <label for="imie">Name:</label>
         <input type="text" name="name" id="name" font size="40" placeholder="Enter your name" required ><br/><br/>
