--- a/zadania-domowe/zadanie -_d_1/index.html
+++ b/zadania-domowe/zadanie -_d_1/index.html
@@ -14,9 +14,9 @@
 <fieldset>
     <legend>Customer info:</legend><br>
     <label for="imie">Name:</label>
-    <input type="text" name="Name:" id="name" size="40" placeholder="Enter your name" required><br/><br/>
+    <input type="text" name="Name:" id="imie" size="40" placeholder="Enter your name" required><br/><br/>
     <label for="number"> Telephone:</label>
-    <input type="text" name="Telephone:" id="numer" size="40" placeholder="Patterm: 234-567-891" pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}" required><br/><br/>
+    <input type="text" name="Telephone:" id="number" size="40" placeholder="Patterm: 234-567-891" pattern="[0-9]{3}-[0-9]{3}-[0-9]{3}" required><br/><br/>
     <label for="email"> Email address:</label>
     <input type="text" name="Email address:" id="email" size="40" placeholder="Enter your email address" required><br/><br/>
 </fieldset>
@@ -24,7 +24,7 @@
 <fieldset>
     <legend>Books:</legend><br>
     <select name="ilosc">
-	            <option selected="selected"></option>
+<!--	            <option selected="selected"> ksiazka</option>-->
 	            <option>Sąsiedzi</option>
 	            <option>Masza i niedźwieć</option>
 	            <option>Bolek i Lolek</option>
@@ -35,7 +35,7 @@
     <label for="imie"> Quanity(Maximum5)</label>
 
     <select name="ilosc">
-	            <option selected="selected"></option>
+	            <option selected="selected">1</option>
 	            <option>1</option>
 	            <option>2</option>
 	            <option>3</option>
