--- a/zadania-domowe/domowe-pobierz-dane/index.html
+++ b/zadania-domowe/domowe-pobierz-dane/index.html
@@ -9,7 +9,7 @@
    <button id="przycisk" onclick="pobierzDane()">Pobierz dane</button>
    
 
-    <script src="js/jquery-3.2.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="js/js.js"></script>
 </body>
 </html>
