--- a/zadania-domowe/moje portfolio/index.html
+++ b/zadania-domowe/moje portfolio/index.html
@@ -69,101 +69,117 @@
     </section>
     <!--   sekcja moje umiejtnosci-->
     <section id="skills">
-       <div class="container">
-       <div class="row">
-        <h2> Moje <span>umiejętności</span></h2>
-        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia reprehenderit, tempore. Est pariatur labore voluptas, reiciendis itaque temporibus officia placeat ratione officiis ex quas fuga quam natus soluta ipsum suscipit!</p>
-          </div>
-        <div class="row" id="skills-icons">
-           <div class="col-sm-6 col-md-3">
-            <figure id="skills-icons-item">
-                <img src="icons/html5.png" alt="Ikona HTML5">
-                <figcaption> HTML5</figcaption>
-            </figure>
+        <div class="container">
+            <div class="row">
+                <h2> Moje <span>umiejętności</span></h2>
+                <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia reprehenderit, tempore. Est pariatur labore voluptas, reiciendis itaque temporibus officia placeat ratione officiis ex quas fuga quam natus soluta ipsum suscipit!</p>
             </div>
-            <div class="col-12 col-sm-6 col-md-3">
-            <figure id="skills-icons-item">
-                <img src="icons/css3.png" alt="Ikona CSS3">
-                <figcaption> CSS 3</figcaption>
-            </figure>
-             </div>
-             <div class="col-12 col-sm-6 col-md-3">
-            <figure id="skills-icons-item">
-                <img src="icons/jquery.png" alt="Ikona Jquery">
-                <figcaption> Jquery</figcaption>
-            </figure>
-             </div>
-              <div class="col-12 col-sm-6 col-md-3">
-            <figure id="skills-icons-item">
-                <img src="icons/js.png" alt="Ikona JS">
-                <figcaption> JS</figcaption>
-            </figure>
+            <div class="row" id="skills-icons">
+                <div class="col-sm-6 col-md-3">
+                    <figure id="skills-icons-item">
+                        <img src="icons/html5.png" alt="Ikona HTML5">
+                        <figcaption> HTML5</figcaption>
+                    </figure>
+                </div>
+                <div class="col-12 col-sm-6 col-md-3">
+                    <figure id="skills-icons-item">
+                        <img src="icons/css3.png" alt="Ikona CSS3">
+                        <figcaption> CSS 3</figcaption>
+                    </figure>
+                </div>
+                <div class="col-12 col-sm-6 col-md-3">
+                    <figure id="skills-icons-item">
+                        <img src="icons/jquery.png" alt="Ikona Jquery">
+                        <figcaption> Jquery</figcaption>
+                    </figure>
+                </div>
+                <div class="col-12 col-sm-6 col-md-3">
+                    <figure id="skills-icons-item">
+                        <img src="icons/js.png" alt="Ikona JS">
+                        <figcaption> JS</figcaption>
+                    </figure>
+                </div>
             </div>
-        </div>
         </div>
     </section>
 
     <!-- moje portfolio-->
     <section id="portfolio">
-        <h2> Moje <span>portfolio</span></h2>
-        <div class="portfolio-items">
-            <div class="portfolio-item" id="portfolio-item-1">
-                <div class="item-mask">
-                    <div class=" item-content">
-                        <div class="item-content-inner">
-                            <h3>lorem ipsum</h3>
-                            <p class="projekt-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, quae?</p>
-                            <h4>Wykorzystane technologie</h4>
-                            <p class="projket-technologies">HTML5,CSS#, RWD,JS</p>
-                            <a href="#" class="projekt-link">
-                         <i class="fa fa-link fa-2x"></i>
-                    </a>
-
-
+        <div class="container">
+            <div class="row">
+                <h2> Moje <span>portfolio</span></h2>
+            </div>
+            <div class="row text-center">
+                <div class="col-12 col-md-6 col-sm-12 col-lg-4">
+                    <div class="portfolio-items">
+                        <div class="portfolio-item" id="portfolio-item-1">
+                            <div class="item-mask">
+                                <div class=" item-content">
+                                    <div class="item-content-inner">
+                                        <h3>lorem ipsum</h3>
+                                        <p class="projekt-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, quae?</p>
+                                        <h4>Wykorzystane technologie</h4>
+                                        <p class="projket-technologies">HTML5,CSS#, RWD,JS</p>
+                                        <a href="#" class="projekt-link">
+                                         <i class="fa fa-link fa-2x"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="portfolio-item" id="portfolio-item-2">
-                <div class="item-mask">
-                    <div class=" item-content">
-                        <div class="item-content-inner">
-                            <h3>lorem ipsum</h3>
-                            <p class="projekt-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, quae?</p>
-                            <h4>Wykorzystane technologie</h4>
-                            <p class="projket-technologies">HTML5,CSS#, RWD,JS</p>
-                            <a href="#" class="projekt-link">
-                         <i class="fa fa-link fa-2x"></i>
-                    </a>
-
+                <div class="col-12 col-sm-12 col-md-6 col-lg-4">
+                    <div class="portfolio-items">
+                        <div class="portfolio-item" id="portfolio-item-2">
+                            <div class="item-mask">
+                                <div class=" item-content">
+                                    <div class="item-content-inner">
+                                        <h3>lorem ipsum</h3>
+                                        <p class="projekt-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, quae?</p>
+                                        <h4>Wykorzystane technologie</h4>
+                                        <p class="projket-technologies">HTML5,CSS#, RWD,JS</p>
+                                        <a href="#" class="projekt-link">
+                                     <i class="fa fa-link fa-2x"></i>
+                                    </a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-            <div class="portfolio-item" id="portfolio-item-3">
-                <div class="item-mask">
-                    <div class=" item-content">
-                        <div class="item-content-inner">
-                            <h3>lorem ipsum</h3>
-                            <p class="projekt-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, quae?</p>
-                            <h4>Wykorzystane technologie</h4>
-                            <p class="projket-technologies">HTML5,CSS#, RWD,JS</p>
-                            <a href="#" class="projekt-link">
-                         <i class="fa fa-link fa-2x"></i>
-                    </a>
-
+                <div class="col-sm-12 col-md-12 col-lg-4">
+                    <div class="portfolio-items">
+                        <div class="portfolio-item" id="portfolio-item-3">
+                            <div class="item-mask">
+                                <div class=" item-content">
+                                    <div class="item-content-inner">
+                                        <h3>lorem ipsum</h3>
+                                        <p class="projekt-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit, quae?</p>
+                                        <h4>Wykorzystane technologie</h4>
+                                        <p class="projket-technologies">HTML5,CSS#, RWD,JS</p>
+                                        <a href="#" class="projekt-link">
+                                     <i class="fa fa-link fa-2x"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+
     </section>
 
     <!--kontakt-->
     <section id="contact">
-        <div class="contact-data">
+        <div class="container">
+        <div class="row">
+        <div class="col-12 col-sm-12 col-md-6 col-lg-6">
+<!--        <div class="contact-data">-->
             <h2> Agnieszka <span>Wasilionok</span></h2>
 
             <address>
@@ -180,15 +196,22 @@
             </div>
 
         </div>
-        <div class="contact-form">
-            <form action="">
+        <div class="col-12 col-md-6 col-lg-6 col-sm-12">
+        
+            <form class="contact-form" action>
+               <div class="contact-form">
                 <input type="text" name="name" placeholder="imię i nazwisko">
                 <input type="email" name="email" placeholder="adres e-mail">
+                <div class="content-form-column">
                 <textarea name="message" placeholder="wiadomość"></textarea>
+                </div>
                 <input type="submit" value="Wyślij">
-
+             </div>
             </form>
+            </div>
         </div>
+        </div>
+        
     </section>
     <footer>
         <p class="copyright"> copyright@ &copy Agnieszka Wasilionok</p>
