--- a/zadania-domowe/Zadanie_domowe_sass/app/index.html
+++ b/zadania-domowe/Zadanie_domowe_sass/app/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    
     <script src="https://use.fontawesome.com/4b874510b7.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i|Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;subset=cyrillic,cyrillic-ext,greek,greek-ext,latin-ext,vietnamese" rel="stylesheet">
-
+    <link rel="stylesheet" href="css/styles.css">
     <!--    <link rel="stylesheet" href="css/responsive.css">-->
     <!--<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">jesli ściągniesz na kompa inoki-->
 </head>
@@ -25,10 +25,10 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
              <span class="navbar-toggler-icon"></span>
          </button>
-        <div id="navbarSupportedContent" class="collapse navbar-collapse navbar-right">
+        <div id="navbarSupportedContent" class="collapse navbar-collapse ">
             <ul class="navbar-nav mr-auto justify-content-end w-100">
                 <li class="nav-item active"><a href="#services">O mnie</a></li>
-                <li class="nav-item"><a href="#umiejetności">Umiejętności</a></li>
+                <li class="nav-item"><a href="#skills">Umiejętności</a></li>
                 <li class="nav-item"><a href="#portfolio">Portfolio</a></li>
                 <li class="nav-item"><a href="#contact">Kontakt</a></li>
 
@@ -41,17 +41,19 @@
 
 
     <!-- naglowek startowy-->
-    <header id="main-header">
-        <div class="header-inner">
-            <h1>Agnieszka <span style="color:#1ac056">Wasilionok</span></h1>
-            <h2>Front-End Developer</h2>
-        </div>
-    </header>
+    <div id="main-header">
+        
+    <div class="main-header-text">
+       <div class="col-sm-12">
+        <h1>Agnieszka <span style="color:#1ac056">Wasilionok</span></h1>
+        <h2>Front-End Developer</h2>
+    </div></div>
+</div>
     <!--o mnie-->
     <section id="about">
         <div class="container">
             <div class="row">
-                <h2 id="absolut-header">O <span style=color:#1ac056>mnie</span></h2>
+                <h2>O <span style=color:#1ac056>mnie</span></h2>
             </div>
             <div class="row">
                 <div class="col-12 col-md-6 col-sm-12">
